Sjednotil jsem avatary na webu i na desktopu, takže po změně na desktopu se změní i pro web